Use Web Compiler extension for main.less Fix spacing of sections

--- a/site/css/main.less
+++ b/site/css/main.less
@@ -407,7 +407,7 @@ ul.nostyle {
 
 // events section (was: Services)
 #events {
-  padding: 100px 0 75px;
+  padding: 0 0; // 100px 0 75px;
 }
 
 .media.service-box {
